# ManualObjectDetection

./: .gitignore  ManualObjectDetection.sln  README.md
ManualObjectDetection/: Application.cpp  Application.h  CMakeLists.txt  ClassLoader.cpp  ClassLoader.h  FrameLoader.cpp  FrameLoader.h  ManualObjectDetection.cpp  ManualObjectDetection.vcxproj  ManualObjectDetection.vcxproj.filters  Writer.cpp  Writer.h  classes.txt  detected.txt  mouseCallback.h
ManualObjectDetection/include/: Application.h  ClassLoader.h  LoadImages.h  LoadImagesFromDirectory.h  LoadImagesFromVideo.h
ManualObjectDetection/settings/: classes.txt
ManualObjectDetection/src/: Application.cpp  ClassLoader.cpp  LoadImages.cpp  LoadImagesFromDirectory.cpp  LoadImagesFromVideo.cpp  Writer.cpp  pch.cpp
ManualObjectDetection/x64/Debug/: ManualObjectDetection.pch  vc141.idb
ManualObjectDetection/x64/Debug/ManualOb.192C5804.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ManualObjectDetection.lastbuildstate  ManualObjectDetection.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
utils/: video_resizer.py
x64/Debug/: ManualObjectDetection.ilk  detected.txt
